--- a/ns.html
+++ b/ns.html
@@ -1,1 +1,1 @@
-<iframe width=100% height=100% src="//rstudio-pubs-static.s3.amazonaws.com/332509_edf45c8493934d02a67e3c4a30cd6c88.html"></iframe>
+<iframe width:100% height:100% src="//rstudio-pubs-static.s3.amazonaws.com/332509_edf45c8493934d02a67e3c4a30cd6c88.html"></iframe>
