--- a/ns.html
+++ b/ns.html
@@ -1,1 +1,1 @@
-<iframe width:100% height:100% src="//rstudio-pubs-static.s3.amazonaws.com/332512_ed67171a3eb34a488946089c3373a0e5.html"></iframe>
+<iframe width=100% height=100% src="//rstudio-pubs-static.s3.amazonaws.com/332512_ed67171a3eb34a488946089c3373a0e5.html"></iframe>
